--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html>
 <head>
   <title>Agregar Jugador</title>
-  <link rel="stylesheet" href="../styles/styles.css">
+  <!-- <link rel="stylesheet" href="../styles/styles.css"> -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 <body>
+  <header class="container"> <h1> PAN Y QUESO</h1></header>
+  <main class="container">
+
+  <h2> USTED ESTÁ EN EL PRIMER Y UNICO SIMULADOR DE PARTIDOS DE FUTBOL 5 </h2>
+  <h2> </h2>
+ 
     <!--Formulario para agregar jugadores nuevos-->
-  <h2>Agregar Jugador</h2>
+  <h4>Agrega Los Jugadores que iran al partido y distribuilos en 2 equipos</h4>
   <form  id="formularioJugador">
     <label for="nombreInput">Nombre:</label>
     <input type="text" id="nombreInput" required>
@@ -39,7 +45,7 @@
     <button type="button" id="crearJugador">Agregar Jugador</button>
   </form>
 <!--Tabla contenedora del array de objetos Jugadores-->
-<h2> Jugadores Disponibles</h2>
+<h4> Jugadores Disponibles</h4>
   <table   class="table table-hover" id="tablaJugadores">
     <thead>
       <tr>
@@ -53,13 +59,15 @@
         <th>Quite</th>
         <th>Arquero</th>
         <th>Promedio</th>
+        <th> equipo</th>
+        <th> Agregar </th>
       </tr>
     </thead>
   </table>
   <!--creo mis 2 equipos-->
   <nav >
-    <h2>EQUIPO 1</h2>
-    <table  class="table table-hover" id="equipo1">
+    <h4>EQUIPO 1</h4>
+    <table  class="table table-hover" id="tablaEquipo1">
         <thead>
           <tr>
             <th>Nombre</th>
@@ -78,8 +86,8 @@
       </table>
   </nav>
   <nav class="tablaEquipos">
-    <H2>EQUIPO 2</H2>
-    <table  class="table table-hover" id="equipo2">
+    <H4>EQUIPO 2</H4>
+    <table  class="table table-hover" id="tablaEquipo2">
         <thead>
           <tr>
             <th>Nombre</th>
@@ -97,6 +105,7 @@
         <tbody></tbody>
       </table>
   </nav>
+</main>
 <script src="script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   
