--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Agregar Jugador</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PAN Y QUESO</title>
   <!-- <link rel="stylesheet" href="../styles/styles.css"> -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
@@ -59,8 +61,8 @@
         <th>Quite</th>
         <th>Arquero</th>
         <th>Promedio</th>
-        <th> equipo</th>
-        <th> Agregar </th>
+        <th>Equipo</th>
+        <th>Agregar </th>
       </tr>
     </thead>
   </table>
@@ -80,6 +82,7 @@
             <th>Quite</th>
             <th>Arquero</th>
             <th>Promedio</th>
+            <th>Eliminar</th>
           </tr>
         </thead>
         <tbody></tbody>
@@ -100,11 +103,13 @@
             <th>Quite</th>
             <th>Arquero</th>
             <th>Promedio</th>
+            <th>Eliminar</th>
           </tr>
         </thead>
         <tbody></tbody>
       </table>
   </nav>
+  <nav> <button id="btnCompara"> Comparar Equipos</button></nav>
 </main>
 <script src="script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
